# AFChat

./: Dockerfile  README.md  commands.txt  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
chat/: admin.py  models.py  urls.py  views.py
chat/migrations/: 0002_alter_message_date.py
djangochat/: settings.py  urls.py
entrypoint/: start-server.sh
nginx/: nginx.default
static/css/: 404.css  style.css
static/js/: scroll-btn.js
templates/: 404_CHANGE.html  home.html  room.html
templates/includes/: stylesheets.html
